--- a/index.html
+++ b/index.html
@@ -1,99 +1,193 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Alaska Earthquake Map - Shapes</title>
+    <title>Alaska Earthquake Map</title>
+
+    <!-- Leaflet CSS: Essential for map styling and marker placement -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <!-- Leaflet JS: The engine that creates the interactive map -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+    <!-- PapaParse: A library used to read and convert CSV files into JavaScript objects -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
 
     <style>
+        /* Make the map fill the entire browser window */
         body { margin:0; padding:0; }
         #mapdiv { height: 100vh; width: 100vw; }
 
+        /* Styling for the Legend box in the bottom right */
         .legend {
-            background: white; padding: 10px 12px; line-height: 22px; color: #333;
-            border-radius: 6px; box-shadow: 0 0 15px rgba(0,0,0,0.2); width: 200px;
+            background: white;
+            padding: 10px 12px;
+            line-height: 18px;
+            color: #333;
+            border-radius: 6px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
+            width: 180px;
+            font-size: 13px;
         }
+
         .legend h4 { margin: 0 0 6px; font-size: 14px; font-weight: bold; }
-        /* Style for the shape icons in the legend */
-        .legend svg { vertical-align: middle; margin-right: 8px; }
-        
-        /* Ensures the divIcon background is transparent */
-        .custom-shape-icon { background: none; border: none; }
+        .legend .divider { border-top: 1px solid #ccc; margin: 8px 0; }
+
+        /* Small colored squares in the legend representing depth */
+        .legend i {
+            width: 18px;
+            height: 18px;
+            float: left;
+            margin-right: 8px;
+            opacity: 0.8;
+        }
+
+        /* Circles in the legend representing magnitude size */
+        .legend .circle {
+            display: inline-block;
+            border-radius: 50%;
+            background: #666;
+            opacity: 0.7;
+            margin-right: 8px;
+            vertical-align: middle;
+        }
+
+        /* Container for the SVG Compass Rose */
+        .compass-rose {
+            background: white;
+            padding: 6px;
+            border-radius: 6px;
+            box-shadow: 0 0 8px rgba(0,0,0,0.3);
+        }
     </style>
 </head>
 <body>
 
+<!-- The container where the map will be injected -->
 <div id="mapdiv"></div>
 
 <script>
-    var map = L.map('mapdiv').setView([58.0, -150.0], 5);
+    /* 1. INITIALIZE MAP: Set center to Alaska [Lat, Lon] and zoom level to 6 */
+    var map = L.map('mapdiv').setView([58.0, -150.0], 6);
 
+    /* 2. BASE LAYER: Load OpenStreetMap tiles so we have a visible map background */
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; OpenStreetMap'
+        maxZoom: 18,
+        attribution: '&copy; <a href="https://www.openstreetmap.org">OpenStreetMap</a>'
     }).addTo(map);
 
-    // Helper to get shape and color based on depth
-    function getShapeData(depth, size) {
-        if (depth <= 40) {
-            // Yellow Triangle
-            return `<polygon points="${size},0 0,${size*2} ${size*2},${size*2}" fill="#ffff66" stroke="black" stroke-width="1"/>`;
-        } else if (depth <= 90) {
-            // Blue Square
-            return `<rect width="${size*2}" height="${size*2}" fill="#3399ff" stroke="black" stroke-width="1"/>`;
-        } else if (depth <= 140) {
-            // Orange Circle
-            return `<circle cx="${size}" cy="${size}" r="${size}" fill="#ff9933" stroke="black" stroke-width="1"/>`;
-        } else {
-            // Purple Star
-            return `<polygon points="${size},0 ${size*0.2},${size*1.9} ${size*1.9},${size*0.7} ${size*0.1},${size*0.7} ${size*1.8},${size*1.9}" fill="#9933cc" stroke="black" stroke-width="1"/>`;
-        }
+    /* 3. SCALE BAR: Adds a scale in miles/kilometers to the bottom left */
+    L.control.scale({
+        position: 'bottomleft',
+        imperial: true,
+        metric: true
+    }).addTo(map);
+
+    /* 4. COMPASS ROSE: Create a custom control to hold an SVG graphic */
+    var compassRose = L.control({ position: 'topright' });
+
+    compassRose.onAdd = function (map) {
+        var div = L.DomUtil.create('div', 'compass-rose');
+        // SVG drawing code for the compass (circles, polygons for stars, and text labels)
+        div.innerHTML = `
+        <svg width="80" height="80" viewBox="0 0 200 200" aria-label="Compass Rose">
+            <circle cx="100" cy="100" r="95" fill="white" stroke="black" stroke-width="3"/>
+            <g transform="translate(100 100)">
+                <g fill="black"> <!-- Cardinal Points (N, S, E, W) -->
+                    <polygon points="0,-80 -10,0 0,-15 10,0"/>
+                    <polygon points="80,0 0,-10 15,0 0,10"/>
+                    <polygon points="0,80 -10,0 0,15 10,0"/>
+                    <polygon points="-80,0 0,-10 -15,0 0,10"/>
+                </g>
+                <g fill="#cc3333"> <!-- Intercardinal Points (NE, SE, etc.) -->
+                    <g transform="rotate(45)"><polygon points="0,-60 -7,0 0,-12 7,0"/></g>
+                    <g transform="rotate(135)"><polygon points="0,-60 -7,0 0,-12 7,0"/></g>
+                    <g transform="rotate(225)"><polygon points="0,-60 -7,0 0,-12 7,0"/></g>
+                    <g transform="rotate(315)"><polygon points="0,-60 -7,0 0,-12 7,0"/></g>
+                </g>
+            </g>
+            <text x="100" y="30" text-anchor="middle" font-size="18" font-weight="bold">N</text>
+            <text x="170" y="105" text-anchor="middle" font-size="16">E</text>
+            <text x="100" y="185" text-anchor="middle" font-size="16">S</text>
+            <text x="30" y="105" text-anchor="middle" font-size="16">W</text>
+            <circle cx="100" cy="100" r="4" fill="black"/>
+        </svg>`;
+        return div;
+    };
+    compassRose.addTo(map);
+
+    /* 5. HELPER FUNCTION: Returns a color hex code based on the earthquake's depth */
+    function getColor(depth) {
+        if (depth <= 40) return "#ffff66";   // Shallow = Yellow
+        if (depth <= 90) return "#3399ff";   // Moderate = Blue
+        if (depth <= 140) return "#ff9933";  // Deep = Orange
+        return "#9933cc";                    // Very Deep = Purple
     }
 
+    /* 6. LEGEND: Create the box that explains colors and circle sizes */
     var combinedLegend = L.control({ position: "bottomright" });
+
     combinedLegend.onAdd = function (map) {
         var div = L.DomUtil.create("div", "info legend");
+        var mags = [3, 5, 7]; // Example magnitudes to show in legend
+
         div.innerHTML = `
-            <h4>Earthquake Depth</h4>
-            <svg width="18" height="18"><polygon points="9,2 2,16 16,16" fill="#ffff66" stroke="black"/></svg> 0–40 km (Triangle)<br>
-            <svg width="18" height="18"><rect width="14" height="14" x="2" y="2" fill="#3399ff" stroke="black"/></svg> 40–90 km (Square)<br>
-            <svg width="18" height="18"><circle cx="9" cy="9" r="7" fill="#ff9933" stroke="black"/></svg> 90–140 km (Circle)<br>
-            <svg width="18" height="18"><polygon points="9,1 2,16 17,6 1,6 16,16" fill="#9933cc" stroke="black"/></svg> > 140 km (Star)
+            <h4>Earthquake Depth (km)</h4>
+            <i style="background:#ffff66"></i> 0–40<br>
+            <i style="background:#3399ff"></i> 40.1–90<br>
+            <i style="background:#ff9933"></i> 90.1–140<br>
+            <i style="background:#9933cc"></i> > 140.1
+            <div class="divider"></div>
+            <h4>Magnitude</h4>
         `;
+
+        // Loop through the example magnitudes to create visual circle size indicators
+        mags.forEach(function (m) {
+            var size = Math.max(m * 1.1, 2);
+            div.innerHTML += `
+                <div>
+                    <span class="circle" style="width:${size * 2}px; height:${size * 2}px;"></span>
+                    M ${m}
+                </div>`;
+        });
         return div;
     };
     combinedLegend.addTo(map);
 
+    /* 7. DATA LOADING: Use PapaParse to fetch and read the external CSV file */
     Papa.parse("Alaska Earthquakes to Print.csv", {
         download: true,
         header: true,
-        dynamicTyping: true,
+        dynamicTyping: true, // Automatically converts strings to numbers
         complete: function(results) {
+            
+            // Loop through every row in the CSV
             results.data.forEach(function(eq) {
-                const lat = eq.latitude;
-                const lon = eq.longitude;
-                const mag = eq.mag;
-                const depth = eq.depth;
+                // Map CSV columns to variables
+                const lat = Number(eq.latitude);
+                const lon = Number(eq.longitude);
+                const mag = Number(eq.mag);
+                const depth = Number(eq.depth);
 
-                if (!isFinite(lat) || !isFinite(lon)) return;
+                // DATA VALIDATION: Skip rows that have missing or broken numbers
+                if (!isFinite(lat) || !isFinite(lon) || !isFinite(mag) || !isFinite(depth)) {
+                    return;
+                }
 
-                // Scale size by magnitude
-                const size = Math.max(mag * 3, 5); 
-
-                // Create custom SVG icon
-                var icon = L.divIcon({
-                    className: 'custom-shape-icon',
-                    html: `<svg width="${size*2}" height="${size*2}" viewBox="0 0 ${size*2} ${size*2}">${getShapeData(depth, size)}</svg>`,
-                    iconSize: [size*2, size*2],
-                    iconAnchor: [size, size] // Centers the shape
-                });
-
-                L.marker([lat, lon], { icon: icon })
-                .bindPopup(`<b>Magnitude:</b> ${mag}<br><b>Depth:</b> ${depth} km`)
+                /* 8. MAPPING: Create a circle marker for each earthquake */
+                L.circleMarker([lat, lon], {
+                    radius: Math.max(mag * 1.1, 2), // Size based on Magnitude
+                    color: getColor(depth),          // Color based on Depth
+                    fillOpacity: 0.7
+                })
+                /* 9. POPUP: Show details when the user clicks on a circle */
+                .bindPopup(`
+                    <b>Magnitude:</b> ${mag}<br>
+                    <b>Depth:</b> ${depth} km
+                `)
                 .addTo(map);
             });
         }
     });
 </script>
+
 </body>
 </html>
