--- a/index.html
+++ b/index.html
@@ -74,12 +74,67 @@
         attribution: '&copy; <a href="https://www.openstreetmap.org">OpenStreetMap</a>'
     }).addTo(map);
 
-    /* 3. SCALE BAR: Adds a scale in miles/kilometers to the bottom left */
-    L.control.scale({
-        position: 'bottomleft',
-        imperial: true,
-        metric: true
-    }).addTo(map);
+
+
+
+
+
+
+
+
+
+
+/* 3. CUSTOM GRADUATED SCALE BAR */
+var CustomScale = L.Control.extend({
+    options: { position: 'bottomleft' },
+    onAdd: function (map) {
+        var container = L.DomUtil.create('div', 'leaflet-control-scale custom-graduated-scale');
+        container.style.background = 'rgba(255,255,255,0.8)';
+        container.style.padding = '5px';
+        container.style.border = '2px solid #333';
+        container.style.fontSize = '10px';
+
+        // Function to update the bar width based on zoom/latitude
+        var update = function () {
+            var center = map.getCenter();
+            // Calculate how many pixels represent 250km at current latitude
+            var point1 = map.latLngToContainerPoint(center);
+            var point2 = map.latLngToContainerPoint(L.latLng(center.lat, center.lng + (250 / (111.32 * Math.cos(center.lat * Math.PI / 180)))));
+            var pixelWidth250km = Math.abs(point2.x - point1.x);
+
+            container.innerHTML = `
+                <div style="font-weight:bold; margin-bottom:2px;">Alaska Map Scale</div>
+                <div style="width:${pixelWidth250km}px; height:8px; border:1px solid black; border-top:none; display:flex;">
+                    <div style="flex:1; border-right:1px solid black; position:relative;"><span style="position:absolute; right:-5px; top:-12px;">50</span></div>
+                    <div style="flex:1; border-right:1px solid black; position:relative;"><span style="position:absolute; right:-8px; top:-12px;">100</span></div>
+                    <div style="flex:1; border-right:1px solid black; position:relative;"><span style="position:absolute; right:-8px; top:-12px;">150</span></div>
+                    <div style="flex:1; border-right:1px solid black; position:relative;"><span style="position:absolute; right:-8px; top:-12px;">200</span></div>
+                    <div style="flex:1; position:relative;"><span style="position:absolute; right:-8px; top:-12px;">250</span><span style="position:absolute; left:-130px; top:-12px;">0 km</span></div>
+                </div>
+                <div style="margin-top:12px; font-style:italic;">Graduated Miles: ${(250 * 0.621371).toFixed(0)} total mi</div>
+            `;
+        };
+
+        map.on('zoomend moveend', update);
+        update();
+        return container;
+    }
+});
+map.addControl(new CustomScale());
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     /* 4. COMPASS ROSE: Create a custom control to hold an SVG graphic */
     var compassRose = L.control({ position: 'topright' });
