--- a/index.html
+++ b/index.html
@@ -57,13 +57,36 @@
             border-radius: 6px;
             box-shadow: 0 0 8px rgba(0,0,0,0.3);
         }
-    </style>
-</head>
 
+
+#filter-container {
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000;
+    background: white;
+    padding: 12px 20px;
+    border-radius: 8px;
+    border: 2px solid rgba(0,0,0,0.2);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+#yearSlider {
+    width: 200px;
+    cursor: pointer;
+}
+
+    </style>
+
+</head>
 
 <body>
 
-<div id="filter-container" style="position: absolute; top: 10px; left: 50px; z-index: 1000; background: white; padding: 10px; border-radius: 5px; border: 2px solid rgba(0,0,0,0.2);">
+<div id="filter-container">
     <label><b>Year: </b></label>
     <input type="range" id="yearSlider" min="2024" max="2026" value="2026" step="1">
     <span id="yearLabel" style="font-weight: bold;">2026</span>
