--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
     compassRose.addTo(map);
 
 
-    /* 5. HELPER FUNCTION: Returns a color hex code based on the earthquake's depth */
+/* 5. HELPER FUNCTION: Returns a color hex code based on the earthquake's depth */
     function getColor(depth) {
-        if (depth <= 40) return "#ffff66";   // Shallow = Yellow
-        if (depth <= 90) return "#3399ff";   // Moderate = Blue
-        if (depth <= 140) return "#ff9933";  // Deep = Orange
-        return "#9933cc";                    // Very Deep = Purple
+        if (depth <= 40) return "#FCF661";    // Shallow = Bright Yellow
+        if (depth <= 90) return "#FE6100";    // Moderate = Orange-Red
+        if (depth <= 140) return "#DC267F";   // Deep = Magenta/Purple
+        return "#648FFF";                     // Very Deep = Dark Blue/Indigo
     }
 
     /* 6. LEGEND: Create the box that explains colors and circle sizes */
@@ -159,23 +159,23 @@
 
     combinedLegend.onAdd = function (map) {
         var div = L.DomUtil.create("div", "info legend");
-        var mags = [3, 5, 7]; // Example magnitudes to show in legend
+        var mags = [3, 5, 7]; 
 
         div.innerHTML = `
             <h4>Earthquake Depth (km)</h4>
-            <i style="background:#ffff66"></i> 0–40<br>
-            <i style="background:#3399ff"></i> 40.1–90<br>
-            <i style="background:#ff9933"></i> 90.1–140<br>
-            <i style="background:#9933cc"></i> > 140.1
+            <i style="background:#FCF661; border: 1px solid #ccc;"></i> 0–40<br>
+            <i style="background:#FE6100"></i> 40.1–90<br>
+            <i style="background:#DC267F"></i> 90.1–140<br>
+            <i style="background:#648FFF"></i> > 140.1
             <div class="divider"></div>
             <h4>Magnitude</h4>
         `;
 
         // Loop through the example magnitudes to create visual circle size indicators
         mags.forEach(function (m) {
-            var size = Math.max(m * 1.1, 2);
+            var size = Math.max(m * 1.5, 2); // Matched to marker radius logic
             div.innerHTML += `
-                <div>
+                <div style="margin-bottom: 4px;">
                     <span class="circle" style="width:${size * 2}px; height:${size * 2}px;"></span>
                     M ${m}
                 </div>`;
@@ -187,7 +187,7 @@
 var allQuakes = []; // Global storage for CSV data
 var markerLayer = L.layerGroup().addTo(map); // Layer to manage markers
 
-// 1. Load the CSV Data
+// 7. Load the CSV Data
 Papa.parse("Alaska Earthquakes to Print.csv", {
     download: true,
     header: true,
@@ -197,7 +197,7 @@ Papa.parse("Alaska Earthquakes to Print.csv", {
     }
 });
 
-// 2. Function to filter and draw markers
+// 8. Function to filter and draw markers
 function updateMap(selectedYear) {
     markerLayer.clearLayers(); // Clear previous year's markers
     
@@ -228,7 +228,7 @@ function updateMap(selectedYear) {
     });
 }
 
-// 3. Slider Event Listener
+// 9. Slider Event Listener
 document.getElementById('yearSlider').addEventListener('input', function(e) {
     var year = e.target.value;
     document.getElementById('yearLabel').innerText = year;
@@ -238,4 +238,5 @@ document.getElementById('yearSlider').addEventListener('input', function(e) {
 </script>
 
 </body>
+
 </html>
