--- a/index.html
+++ b/index.html
@@ -115,19 +115,11 @@
     /* 1. INITIALIZE MAP: Set center to Alaska [Lat, Lon] and zoom level to 6 */
     var map = L.map('mapdiv').setView([58.0, -150.0], 6);
 
-
-    /* 2. BASE LAYER: Load CartoDB Positron (Light Gray Grayscale) */
-    L.tileLayer('https://{s}://{z}/{x}/{y}{r}.png', {
-        maxZoom: 20,
-        attribution: '&copy; <a href="https://www.openstreetmap.org">OpenStreetMap</a> contributors &copy; <a href="https://carto.com">CARTO</a>'
+    /* 2. BASE LAYER: Load OpenStreetMap tiles so we have a visible map background */
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        maxZoom: 18,
+        attribution: '&copy; <a href="https://www.openstreetmap.org">OpenStreetMap</a>'
     }).addTo(map);
-
-
-
-
-
-
-
 
     /* 3. SCALE BAR: Adds a scale in miles/kilometers to the bottom left */
     L.control.scale({
@@ -205,7 +197,7 @@ Papa.parse("Alaska Earthquakes to Print.csv", {
     }
 });
 
-    // 8. Function to filter and draw markers
+// 8. Function to filter and draw markers
     function updateMap(selectedYear) {
         markerLayer.clearLayers(); 
         
@@ -218,7 +210,7 @@ Papa.parse("Alaska Earthquakes to Print.csv", {
 
                 if (isFinite(lat) && isFinite(lon)) {
                     var marker = L.circleMarker([lat, lon], {
-                        radius: Math.max(mag * 1.5, 2), 
+                        radius: Math.max(mag * 2.0, 2), 
                         fillColor: getColor(depth), // The high-contrast color
                         color: "#333",              // Dark gray border for contrast
                         weight: 0.5,                // Thin border line
