--- a/index.html
+++ b/index.html
@@ -31,16 +31,23 @@
         .legend h4 { margin: 0 0 6px; font-size: 14px; font-weight: bold; }
         .legend .divider { border-top: 1px solid #ccc; margin: 8px 0; }
 
-       /* Small colored squares in the legend representing depth */
-	.legend i {
-    	width: 18px;
-    	height: 18px;
-    	float: left;          /* Keeps squares on the left */
-    	margin-right: 10px;   /* Consistent gap between square and text */
-    	opacity: 0.8;
-    	clear: left;          /* Forces each square onto a new line */
-    	margin-bottom: 4px;   /* Adds a tiny vertical space between rows */
-	}
+/* This ensures the colored square and text stay on the same line */
+.legend-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 6px; /* Space between rows */
+}
+
+
+        /* Small colored squares in the legend representing depth */
+.legend i {
+    width: 18px;
+    height: 18px;
+    margin-right: 10px; /* Space between square and text */
+    opacity: 0.8;
+    flex-shrink: 0;     /* Prevents the square from squishing */
+    display: inline-block;
+}
 
         /* Circles in the legend representing magnitude size */
         .legend .circle {
@@ -163,12 +170,12 @@
         var div = L.DomUtil.create("div", "info legend");
         var mags = [3, 5, 7]; 
 
-        div.innerHTML = `
+div.innerHTML = `
             <h4>Earthquake Depth</h4>
-            <i style="background:#FCF661; border: 1px solid #ccc;"></i> 0–40 km (Shallow)<br>
-            <i style="background:#FE6100"></i> 40.1–90 km (Int-Shallow)<br>
-            <i style="background:#DC267F"></i> 90.1–140 km (Int-Deep)<br>
-            <i style="background:#648FFF"></i> > 140.1 km (Deep)
+            <div class="legend-item"><i style="background:#FCF661; border: 1px solid #ccc;"></i> 0–40 km (Shallow)</div>
+            <div class="legend-item"><i style="background:#FE6100"></i> 40.1–90 km (Shallow-Int)</div>
+            <div class="legend-item"><i style="background:#DC267F"></i> 90.1–140 km (Int-Deep)</div>
+            <div class="legend-item"><i style="background:#648FFF"></i> > 140.1 km (Deep)</div>
             <div class="divider"></div>
             <h4>Magnitude</h4>
         `;
@@ -240,5 +247,6 @@ document.getElementById('yearSlider').addEventListener('input', function(e) {
 
 </body>
 </html>
+
 
 
