--- a/index.html
+++ b/index.html
@@ -188,12 +188,12 @@ titleBox.addTo(map);
     compassRose.addTo(map);
 
 /* 5. HELPER FUNCTION: Returns a color hex code based on the earthquake's depth */
-    function getColor(depth) {
-        if (depth <= 40) return "#FCF661";    // Shallow = Bright Yellow
-        if (depth <= 90) return "#FE6100";    // Moderate = Orange-Red
-        if (depth <= 140) return "#DC267F";   // Deep = Magenta/Purple
-        return "#648FFF";                     // Very Deep = Dark Blue/Indigo
-    }
+function getColor(depth) {
+    if (depth <= 40) return "#FFFF00";    // Shallow = Bright Yellow
+    if (depth <= 90) return "#00FF00";    // Moderate = Green
+    if (depth <= 140) return "#FF0000";   // Deep = Red 
+    return "#4B0082";                     // Very Deep = Indigo/Dark Blue
+}
 
     /* 6. LEGEND: Create the box that explains colors and circle sizes */
     var combinedLegend = L.control({ position: "bottomright" });
@@ -203,14 +203,14 @@ titleBox.addTo(map);
         var mags = [3, 5, 7]; 
 
 div.innerHTML = `
-            <h4>Earthquake Depth</h4>
-            <div class="legend-item"><i style="background:#FCF661; border: 1px solid #ccc;"></i> 0–40 km (Shallow)</div>
-            <div class="legend-item"><i style="background:#FE6100"></i> 40.1–90 km (Shallow-Int)</div>
-            <div class="legend-item"><i style="background:#DC267F"></i> 90.1–140 km (Int-Deep)</div>
-            <div class="legend-item"><i style="background:#648FFF"></i> > 140.1 km (Deep)</div>
-            <div class="divider"></div>
-            <h4>Magnitude</h4>
-        `;
+    <h4>Earthquake Depth</h4>
+    <div class="legend-item"><i style="background:#FFFF00; border: 1px solid #ccc;"></i> 0–40 km (Shallow)</div>
+    <div class="legend-item"><i style="background:#00FF00"></i> 40.1–90 km (Moderate)</div>
+    <div class="legend-item"><i style="background:#FF0000"></i> 90.1–140 km (Deep)</div>
+    <div class="legend-item"><i style="background:#4B0082"></i> > 140.1 km (Very Deep)</div>
+    <div class="divider"></div>
+    <h4>Magnitude</h4>
+`;
 
         // Loop through the example magnitudes to create visual circle size indicators
         mags.forEach(function (m) {
@@ -279,3 +279,4 @@ document.getElementById('yearSlider').addEventListener('input', function(e) {
 
 </body>
 </html>
+
