--- a/index.html
+++ b/index.html
@@ -106,19 +106,22 @@
 
 <div id="filter-container">
     <div style="display: flex; flex-direction: column; align-items: center;">
+        
+        <!-- Slider Section -->
         <div style="display: flex; align-items: center; gap: 15px;">
             <label><b>Year: </b></label>
-            <input type="range" id="yearSlider" min="2022" max="2026" value="2026" step="1" list="steplist">
-            <span id="yearLabel" style="font-weight: bold; width: 40px;">2026</span>
+            <!-- Set fixed width here -->
+            <input type="range" id="yearSlider" min="2022" max="2026" value="2022" step="1" list="steplist" style="width: 300px;">
+            <span id="yearLabel" style="font-weight: bold; width: 40px;">2022</span>
         </div>
         
-        <!-- The Labels below the slider -->
-        <div style="display: flex; justify-content: space-between; width: 200px; margin-left: 55px; font-size: 11px; color: #666; font-weight: bold; padding-top: 5px;">
-            <span>2022</span>
-            <span>2023</span>
-            <span>2024</span>
-            <span>2025</span>
-            <span>2026</span>
+        <!-- Labels Section: Width must match the slider (300px) -->
+        <div style="display: flex; justify-content: space-between; width: 300px; font-size: 11px; color: #666; font-weight: bold; padding-top: 5px; margin-left: 55px;">
+            <span style="width: 20px; text-align: center;">2022</span>
+            <span style="width: 20px; text-align: center;">2023</span>
+            <span style="width: 20px; text-align: center;">2024</span>
+            <span style="width: 20px; text-align: center;">2025</span>
+            <span style="width: 20px; text-align: center;">2026</span>
         </div>
 
         <!-- This creates the visual "tick marks" on the slider track -->
