--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ titleBox.onAdd = function (map) {
         <p>This map analyzes Alaska earthquakes by <b>depth</b> for the years 2022 through 2026.</p>
         <p><b>Source:</b> <a href="https://earthquake.usgs.gov/earthquakes/search/" target="_blank">USGS Earthquake Catalog</a></p>
         <p style="color: #666; font-style: italic; font-size: 11px; margin-top: 8px;">
-            Created by me in February 2026
+            Created by Georg Weggener in February 2026
         </p>
     `;
     return div;
@@ -283,4 +283,5 @@ document.getElementById('yearSlider').addEventListener('input', function(e) {
 </script>
 
 </body>
+
 </html>
